--- a/index.html
+++ b/index.html
@@ -19,22 +19,10 @@
         <li class="slide">Slide 4</li>
         <li class="slide">Slide 5</li>
     </ul>
-
-    <div class="controls">
-        <button class="control" id="pause-btn">Pause</button>
-        <button class="control" id="prev-btn">Prev</button>
-        <button class="control" id="next-btn">Next</button>
-    </div>
-
-    <ul class="indicators" id="indicators">
-        <li class="indicator active" data-slide-to="0"></li>
-        <li class="indicator" data-slide-to="1"></li>
-        <li class="indicator" data-slide-to="2"></li>
-        <li class="indicator" data-slide-to="3"></li>
-        <li class="indicator" data-slide-to="4"></li>
-    </ul>
 </div>
 
+<script src="assets/js/carousel.js"></script>
+<script src="assets/js/swipe-carousel.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
