--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
     </ul>
 </div>
 
-<script src="assets/js/carousel.js"></script>
-<script src="assets/js/swipe-carousel.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="assets/js/main.js" type="module"></script>
 </body>
 </html>
